--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -3,11 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
+    {% load staticfiles %}
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="{% static "css/main.css" %}">
 </head>
 <body>
-{% load staticfiles %}
-<h2>Welcome to my home page</h2>
-<img src="{% static "main_app/images/img.jpg" %}" />
+
+{#<img src="{% static "main_app/images/img.jpg" %}" />#}
+<div class="container-fluid home_page">
+    <div class="row">
+        <div class="col-l-12 text-center ">
+            Welcome
+        </div>
+    </div>
+    <div class="row menu_tile">
+        <div class="col-l-12 text-center ">
+            Budget Monitor
+        </div>
+    </div>
+    <div class="row menu_tile">
+        <div class="col-l-12 text-center">
+            Learn Vocab
+        </div>
+    </div>
+    <div class="row menu_tile">
+        <div class="col-l-12 text-center">
+            Short Notes
+        </div>
+    </div>
+
+</div>
+
 
 </body>
 </html>
