--- a/static/css/main.css
+++ b/static/css/main.css
@@ -14,3 +14,9 @@
     padding-top: 5px;
     padding-bottom: 5px;
 }
+.forms{
+        background-color: #777777;
+        padding-left: 10px;
+        padding-right: 10px;
+
+}
