--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -9,26 +9,26 @@
     <link rel="stylesheet" href="{% static "css/main.css" %}">
 </head>
 <body>
-
+<h1>{{ time }}</h1>
 {#<img src="{% static "main_app/images/img.jpg" %}" />#}
 <div class="container-fluid home_page">
     <div class="row">
-        <div class="col-l-12 text-center ">
+        <div class="col-lg-12 text-center ">
             Welcome
         </div>
     </div>
     <div class="row menu_tile">
-        <div class="col-l-12 text-center ">
+        <div class="col-lg-12 text-center ">
             Budget Monitor
         </div>
     </div>
     <div class="row menu_tile">
-        <div class="col-l-12 text-center">
+        <div class="col-lg-12 text-center">
             Learn Vocab
         </div>
     </div>
     <div class="row menu_tile">
-        <div class="col-l-12 text-center">
+        <div class="col-lg-12 text-center">
             Short Notes
         </div>
     </div>
