--- a/main_app/templates/add_item.html
+++ b/main_app/templates/add_item.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title></title>
     {% load staticfiles %}
-    <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="{% static "css/main.css" %}">
