--- a/user_manager/templates/login.html
+++ b/user_manager/templates/login.html
@@ -5,7 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-<form action="" method="post">{% csrf_token %}
+{{ login_error_message }}
+<form action="{% url 'login' %}" method="post">{% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="Login">
 
