--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -15,11 +15,12 @@
     <div class="row">
         <div class="col-lg-12 text-center ">
             Welcome
+{#            {% lorem 1 p %}#}
         </div>
     </div>
     <div class="row menu_tile">
         <div class="col-lg-12 text-center ">
-            Budget Monitor
+            <a href="{% url 'login' %}">Budget Monitor</a>
         </div>
     </div>
     <div class="row menu_tile">
