--- a/main_app/templates/add_item.html
+++ b/main_app/templates/add_item.html
@@ -1,14 +1,8 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-    {% load staticfiles %}
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="{% static "css/main.css" %}">
-</head>
+{% extends '_base.html' %}
+{% block content %}
+{% load staticfiles %}
+<link rel="stylesheet" href="{% static "css/main.css" %}">
+
 <body>
 <div class="container-fluid">
     <div class="row">
@@ -22,5 +16,4 @@
         </div>
     </div>
 </div>
-</body>
-</html>
+{% endblock %}
