--- a/user_manager/templates/registration.html
+++ b/user_manager/templates/registration.html
@@ -1,16 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-<form action="" method="post">{% csrf_token %}
+{% extends '_base.html' %}
+{% block content %}
+<form class="form-inline" action="" method="post">{% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="Register">
 
 </form>
-
-</body>
-</html>
+{% endblock %}
