--- a/user_manager/templates/login.html
+++ b/user_manager/templates/login.html
@@ -2,13 +2,15 @@
 {% extends '_base.html' %}
 {% block content %}
 {{ login_error_message }}
-{#<form action="{% url 'login' %}" method="post">{% csrf_token %}#}
-{#    {{ form.as_p }}#}
-{#    <input name="referrer" type="hidden" value="{{ param }}">#}
-{#    <input type="submit" value="Login">#}
-{##}
-{#</form>#}
-    {% load crispy_forms_tags %}
-    {% crispy form form.helper  %}
+<form action="{% url 'login' %}" method="post">{% csrf_token %}
+    {{ form.as_p }}
+    <input name="referrer" type="hidden" value="{{ param }}">
+    <input type="submit" value="Login">
+
+</form>
+
+{#    {% load crispy_forms_tags %}#}
+{#    {% crispy form form.helper  %}#}
+
 
 {% endblock %}
