--- a/user_manager/templates/registration.html
+++ b/user_manager/templates/registration.html
@@ -1,8 +1,11 @@
 {% extends '_base.html' %}
 {% block content %}
-<form class="form-inline" action="" method="post">{% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Register">
+{#<form class="form-inline" action="" method="post">{% csrf_token %}#}
+{#    {{ form.as_p }}#}
+{#    <input type="submit" value="Register">#}
+{##}
+{#</form>#}
 
-</form>
+        {% load crispy_forms_tags %}
+    {% crispy form form.helper  %}
 {% endblock %}
