--- a/user_manager/templates/registration.html
+++ b/user_manager/templates/registration.html
@@ -1,11 +1,32 @@
 {% extends '_base.html' %}
 {% block content %}
-{#<form class="form-inline" action="" method="post">{% csrf_token %}#}
-{#    {{ form.as_p }}#}
-{#    <input type="submit" value="Register">#}
-{##}
-{#</form>#}
+    {% load crispy_forms_tags %}
+    {% load staticfiles %}
+    <link rel="stylesheet" href="{% static "css/main.css" %}"/>
+    <div class="container">
+    <div class="row">
+         <div class="col-md-3"></div>
+        <div class="col-md-6" style="margin: 40px auto; border: 1px solid #cccccc; border-radius: 10px">
+            <h1 style="font-family: otama Serif; text-align: center">Get Registered Here</h1>
+        </div>
+        <div class="col-md-3"></div>
+    </div>
+    </div>
 
-        {% load crispy_forms_tags %}
-    {% crispy form form.helper  %}
+
+    <div class="container ">
+        <div class="row">
+            <div class="col-md-3" ></div>
+            <div class="col-md-6" >
+                <form class="form_custom" action="" method="post">{% csrf_token %}
+                {{ form|crispy }}
+                 <input class="btn btn-default" type="submit" value="Submit">
+                </form>
+                </div>
+                <div class="col-md-3" ></div>
+
+            </div>
+        </div>
+    </div>
+
 {% endblock %}
