--- a/user_manager/templates/registration.html
+++ b/user_manager/templates/registration.html
@@ -7,7 +7,7 @@
     <div class="row">
          <div class="col-md-3"></div>
         <div class="col-md-6" style="margin: 40px auto; border: 1px solid #cccccc; border-radius: 10px">
-            <h1 style="font-family:'Otama-ep'; text-align: center">Get Registered Here</h1>
+            <h1 style="font-family:'AllerDisplay'; text-align: center">Get Registered Here</h1>
         </div>
         <div class="col-md-3"></div>
     </div>
