--- a/main_app/templates/_base.html
+++ b/main_app/templates/_base.html
@@ -2,28 +2,41 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script  src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+
+
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Tangerine">
 </head>
 <body>
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-inverse">
     <div class="container-fluid">
         <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#main_menu">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
             <a class="navbar-brand" href="#">WebSiteName</a>
+
         </div>
-        <div>
+        <div class="collapse navbar-collapse" id="main_menu">
             <ul class="nav navbar-nav">
                 {% if user.is_superuser %}
                     <li class="active"><a href="{% url 'admin' %}">Admin</a></li>
                 {% endif %}
                 <li><a href="{% url 'categories' %}">Apps</a></li>
+                <li><a class="active" href="{% url 'home' %}">Home</a></li>
                 <li><a href="{% url 'add_category' %}">Edit Category</a></li>
                 <li><a href="{% url 'time_line' %}">Time Line</a></li>
                 {% if user.is_authenticated %}
                     <li><a href="{% url 'logout' %}">logout</a></li>
                 {% else %}
                     <li><a href="{% url 'login' %}">login</a></li>
+                    <li><a href="{% url 'register' %}">Register</a></li>
+                    <li><a href="{% url 'register' %}">Sign Up</a></li>
+
                 {% endif %}
             </ul>
         </div>
