--- a/user_manager/templates/login.html
+++ b/user_manager/templates/login.html
@@ -26,7 +26,7 @@
 
 
                         <input name="referrer" type="hidden" value="{{ param }}">
-                        <input type="submit" value="Login">
+                        <input class="btn btn-default"  type="submit" value="Login">
 
                     </form>
                 </div>
