--- a/main_app/templates/edit_category.html
+++ b/main_app/templates/edit_category.html
@@ -7,6 +7,7 @@
     <div class="container-fluid">
         <div id="cat_form" class="row">
             <div class="col-md-5">
+                <h2>Add a new category here.</h2>
                 <form action="" method="post">{% csrf_token %}
                     {{ form|crispy }}
                     <input class="btn btn-default" type="submit" value="Add"/>
