Validation error : re-enter password function accomplished fields with error are marked with different bg colour. Changes were added from backend.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -89,7 +89,10 @@ body .nav{
     font-size: 15px;
 }
 body{
-        font-family: Fontin-Bold;
+        font-family: Aller_Bd;
         font-size: 15px;
 
+}
+.error{
+    background-color: #F2DEDE;
 }
