login form rendering along with notification on error.html

--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 <h1>{{ time }}</h1>
+<h2>Hi ! {{ user.name }}</h2>
 {#<img src="{% static "main_app/images/img.jpg" %}" />#}
 <div class="container-fluid home_page">
     <div class="row">
