--- a/templates/error.html
+++ b/templates/error.html
@@ -1,19 +1,33 @@
 {% extends '_base.html' %}
 {% block content %}
-{% load staticfiles %}
+    {% load staticfiles %}
+    {% load crispy_forms_tags %}
     <link rel="stylesheet" href="{% static "css/main.css" %}"/>
 
     <div class="container">
         {% if error %}
             <div class="row">
                 <div class="col-xs-12">
-                    <div style="padding: 25px; font-family: 'AUdimat-Bold'; font-size: 20px">Hi How are you </div>
                     <div class="alert-success" style="padding: 25px; font-family: 'AUdimat-Italic'; font-size: 20px">
                         {{ error }}
                     </div>
                 </div>
 
             </div>
+        {% endif %}
+        {% if login_form %}
+            <div class="row">
+                <div class="col-md-3"></div>
+                <div class="col-md-6">
+                    <form class="form_custom" action="{% url 'login' %}" method="post">{% csrf_token %}
+                        {{ login_form|crispy }}
+                        <input class="btn btn-default" type="submit" value="Submit">
+                    </form>
+                </div>
+                <div class="col-md-3"></div>
+
+            </div>
+
         {% endif %}
     </div>
     {#    {% block request_path = request.path %}{% endblock %}#}
