--- a/main_app/templates/dash_board.html
+++ b/main_app/templates/dash_board.html
@@ -1,13 +1,60 @@
 {% extends '_base.html' %}
 {% load staticfiles %}
 {% block content %}
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-md-6"> some content</div>
-        <div class="col-md-6"> Right content</div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-6">
+                    <table class="table">
+                        <thead>
+                        <tr>
+                            <th>Item</th>
+                            <th>Price</th>
+                            <th>Category</th>
+                        </tr>
+                        <tbody>
+                        {% for item in items_today %}
+                            <tr class="success">
+                                <td> {{ item }}</td>
+                                <td>{{ item.price }}</td>
+                                <td>{{ item.category }}</td>
+                            </tr>
+                        {% endfor %}
+                        </tbody>
+                        </thead>
 
+                    </table>
+
+            </div>
+
+
+            <div class="col-md-6">
+                    <table class="table">
+                        <thead>
+                        <tr>
+                            <th>Item</th>
+                            <th>Price</th>
+                            <th>Category</th>
+                        </tr>
+                        <tbody>
+                        {% for item in items_this_week %}
+                            <tr class="success">
+                                <td> {{ item }}</td>
+                                <td>{{ item.price }}</td>
+                                <td>{{ item.category }}</td>
+                            </tr>
+                        {% endfor %}
+                        </tbody>
+                        </thead>
+
+                    </table>
+            </div>
+
+
+        </div>
 
     </div>
 
-</div>
+
+
+
 {% endblock %}
