--- a/main_app/templates/edit_category.html
+++ b/main_app/templates/edit_category.html
@@ -8,36 +8,36 @@
         <div id="cat_form" class="row">
             <div class="col-md-5">
                 <h2>Add a new category here.</h2>
+
                 <form action="" method="post">{% csrf_token %}
                     {{ form|crispy }}
                     <input class="btn btn-default" type="submit" value="Add"/>
                 </form>
             </div>
-            <div class="col-md-6"  style="margin-left: 30px">
-                <h2>Edit the currently available categories</h2>
-                <br>
+            <div class="col-md-6" style="margin-left: 30px">
+                <div class="row" style="margin-bottom: 30px">
+                    <div class="col-md-12">
+                        <h2>Edit the currently available categories</h2>
+                    </div>
+                </div>
                 {% for category in categories %}
                     <div class="row" style="margin-bottom: 10px">
-                        <div class="col-md-4">{{ category.category_name }} </div>
-                        <div class="col-md-3">
+                        <div class="col-md-3">{{ category.category_name }} </div>
+                        <div class="col-md-2">
                             <form class="delete-form" method="post" action="{% url 'cat_delete' %}">{% csrf_token %}
                                 <input type="hidden" name="category" value="{{ category.category_name }}">
-                                <input class="btn btn-danger" type="submit" value="Delete">
+                                <input class="btn btn-danger btn-block" style="margin-bottom: 2px" type="submit" value="Delete">
                             </form>
-
                         </div>
-
-                        <div class="col-md-3">
+                        <div class="col-md-2">
                             <form class="delete-form" method="post" action="{% url 'cat_delete' %}">{% csrf_token %}
                                 <input type="hidden" name="category" value="{{ category.category_name }}">
-                                <input class="btn btn-default" type="submit" value="Rename">
+                                <input class="btn btn-default btn-block" type="submit" value="Rename">
                             </form>
-
                         </div>
                         <div id="ff"></div>
                     </div>
                 {% endfor %}
-
             </div>
         </div>
     </div>
