--- a/main_app/templates/edit_category.html
+++ b/main_app/templates/edit_category.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="{% static "css/main.css" %}"/>
     <div class="container-fluid">
         <div id="cat_form" class="row">
-            <div class="col-md-5">
+            <div class="col-md-5" >
                 <h2>Add a new category here.</h2>
 
                 <form action="" method="post">{% csrf_token %}
@@ -14,7 +14,7 @@
                     <input class="btn btn-default" type="submit" value="Add"/>
                 </form>
             </div>
-            <div class="col-md-6" style="margin-left: 30px">
+            <div class="col-md-6"  style="border-left: 2px solid #cccccc">
                 <div class="row" style="margin-bottom: 30px">
                     <div class="col-md-12">
                         <h2>Edit the currently available categories</h2>
@@ -22,7 +22,7 @@
                 </div>
                 {% for category in categories %}
                     <div class="row" style="margin-bottom: 10px">
-                        <div class="col-md-3">{{ category.category_name }} </div>
+                        <div class="col-md-3 col-md-offset-3">{{ category.category_name }} </div>
                         <div class="col-md-2">
                             <form class="delete-form" method="post" action="{% url 'cat_delete' %}">{% csrf_token %}
                                 <input type="hidden" name="category" value="{{ category.category_name }}">
