--- a/main_app/templates/dash_board.html
+++ b/main_app/templates/dash_board.html
@@ -1,5 +1,6 @@
 {% extends '_base.html' %}
 {% load staticfiles %}
+{% load dash_board_template_tags %}
 {% block content %}
     <div class="container-fluid">
         <div class="row">
@@ -12,13 +13,15 @@
                             <th>Category</th>
                         </tr>
                         <tbody>
-                        {% for item in items_today %}
+                        {% this_week_0 user  %}
+                        {% for item in this_day %}
                             <tr class="success">
-                                <td> {{ item }}</td>
+                                <td> {{ item.name }}</td>
                                 <td>{{ item.price }}</td>
                                 <td>{{ item.category }}</td>
                             </tr>
                         {% endfor %}
+
                         </tbody>
                         </thead>
 
