--- a/main_app/templates/add_category_admin.html
+++ b/main_app/templates/add_category_admin.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="{% static "css/main.css" %}"/>
     <div class="container-fluid">
         <div id="cat_form" class="row">
-            <div class="col-md-3">
+            <div class="col-md-4">
                 <h2>Add a new category here.</h2>
 
                 <form action="" method="post">{% csrf_token %}
@@ -14,18 +14,14 @@
                     <input class="btn btn-default" type="submit" value="Add"/>
                 </form>
             </div>
-            <div class="col-md-9" style="border-left: 2px solid #cccccc">
+            <div class="col-md-8" style="border-left: 2px solid #cccccc">
                 <div class="row" style="margin-bottom: 30px">
                     <div class="col-md-12">
-                        <h2 style="text-align: center">Edit the currently available categories</h2>
+                        <h2>Edit the currently available categories</h2>
                     </div>
                 </div>
-
                 <div class="row" style="margin-bottom: 30px">
-                    <div class="col-md-6">
-                        <div class="row" style="margin-bottom: 10px">
-                            <h2 style="text-align: center">Your categories</h2>
-                        </div>
+                    <div class="col-md-12">
                         {% for category in categories %}
                             <div class="row" style="margin-bottom: 10px">
                                 <div class="col-md-3">{{ category.category_name }} </div>
@@ -44,33 +40,33 @@
                                         <input class="btn btn-default btn-block" type="submit" value="Rename">
                                     </form>
                                 </div>
-                                <div id="ff"></div>
-                            </div>
-                        {% endfor %}
-                    </div>
-                    <div class="col-md-6">
-                            <div class="row" style="margin-bottom: 10px">
-                                <h2 style="text-align: center">System defined categories</h2>
-                            </div>
-                        {% for category in built_in_cats %}
-                            <div class="row" style="margin-bottom: 10px">
-                                <div class="col-md-3">{{ category.category_name }} </div>
-
-                                <div class="col-md-6">
-                                    <form class="delete-form" method="post"
-                                          action="{% url 'cat_delete' %}">{% csrf_token %}
-                                        <input type="hidden" name="category" value="{{ category.category_name }}">
-                                        <input class="btn btn-success btn-block" style="margin-bottom: 2px" type="submit"
-                                               value="Add to my categories">
-                                    </form>
+                                <div class="col-md-3">
+                                    <button type="button" class="btn btn-info btn-block" data-toggle="modal" data-target="#myModal{{ forloop.counter }}">Description</button>
                                 </div>
-                                <div id="ff"></div>
+                                    <div id="myModal{{ forloop.counter }}" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">What it includes.</h4>
+                </div>
+                <div class="modal-body">
+                    {{ category.description }}
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
                             </div>
                         {% endfor %}
                     </div>
                 </div>
-
-
             </div>
         </div>
     </div>
