--- a/main_app/templates/dash_board.html
+++ b/main_app/templates/dash_board.html
@@ -2,62 +2,65 @@
 {% load staticfiles %}
 {% load dash_board_template_tags %}
 {% block content %}
+    {% load dash_board_template_tags %}
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-6">
-                    <table class="table">
-                        <thead>
-                        <tr>
-                            <th>Item</th>
-                            <th>Price</th>
-                            <th>Category</th>
+            <div class="col-md-3" style="margin-left: 10px; margin-right: 30px">
+                <div class="row"></div>
+                <div class="row">
+                    {% user_categories user as categories %}
+                    {% for category in categories %}
+                        <form action="" method="post">{% csrf_token %}
+                            <input type="submit" class="btn btn-default btn-block" value="{{ category }}">
+                        </form>
+                    {% endfor %}
+                </div>
+            </div>
+            <div class="col-md-4">
+                <table class="table">
+                    <thead>
+                    <tr>
+                        <th>Item</th>
+                        <th>Price</th>
+                        <th>Category</th>
+                    </tr>
+                    <tbody>
+                    {% this_week_0 user %}
+                    {% for item in this_day %}
+                        <tr class="success">
+                            <td> {{ item.name }}</td>
+                            <td>{{ item.price }}</td>
+                            <td>{{ item.category }}</td>
                         </tr>
-                        <tbody>
-                        {% this_week_0 user  %}
-                        {% for item in this_day %}
-                            <tr class="success">
-                                <td> {{ item.name }}</td>
-                                <td>{{ item.price }}</td>
-                                <td>{{ item.category }}</td>
-                            </tr>
-                        {% endfor %}
+                    {% endfor %}
 
-                        </tbody>
-                        </thead>
+                    </tbody>
+                    </thead>
 
-                    </table>
+                </table>
 
             </div>
-
-
-            <div class="col-md-6">
-                    <table class="table">
-                        <thead>
-                        <tr>
-                            <th>Item</th>
-                            <th>Price</th>
-                            <th>Category</th>
+            <div class="col-md-4">
+                <table class="table">
+                    <thead>
+                    <tr>
+                        <th>Item</th>
+                        <th>Price</th>
+                        <th>Category</th>
+                    </tr>
+                    <tbody>
+                    {% for item in items_this_week1 %}
+                        <tr class="success">
+                            <td> {{ item }}</td>
+                            <td>{{ item.price }}</td>
+                            <td>{{ item.category }}</td>
                         </tr>
-                        <tbody>
-                        {% for item in items_this_week %}
-                            <tr class="success">
-                                <td> {{ item }}</td>
-                                <td>{{ item.price }}</td>
-                                <td>{{ item.category }}</td>
-                            </tr>
-                        {% endfor %}
-                        </tbody>
-                        </thead>
+                    {% endfor %}
+                    </tbody>
+                    </thead>
 
-                    </table>
+                </table>
             </div>
-
-
         </div>
-
     </div>
-
-
-
-
 {% endblock %}
