--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -22,7 +22,7 @@
     </div>
     <div class="row menu_tile">
         <div class="col-lg-12 text-center ">
-            <a href="{% url 'login' %}">Budget Monitor</a>
+            <a href="{% url 'dash_board' %}">Budget Monitor</a>
         </div>
     </div>
     <div class="row menu_tile">
