--- a/templates/error.html
+++ b/templates/error.html
@@ -8,7 +8,7 @@
         {% if error %}
             <div class="row">
                 <div class="col-xs-12">
-                    <div class="alert-success" style="padding: 25px; font-family: 'AUdimat-Italic'; font-size: 20px">
+                    <div class="alert-success" style="padding: 25px; font-size: 20px; text-align: center">
                         {{ error }}
                     </div>
                 </div>
