--- a/main_app/templates/dash_board.html
+++ b/main_app/templates/dash_board.html
@@ -6,7 +6,9 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-3" style="margin-left: 10px; margin-right: 30px">
-                <div class="row"></div>
+                <div class="row">
+
+                </div>
                 <div class="row">
                     {% user_categories user as categories %}
                     {% for category in categories %}
