--- a/templates/error.html
+++ b/templates/error.html
@@ -29,6 +29,8 @@
             </div>
 
         {% endif %}
+
+    asdnasdaaksd
     </div>
     {#    {% block request_path = request.path %}{% endblock %}#}
 
